--- a/client/package.json
+++ b/client/package.json
@@ -7,8 +7,15 @@
     "start": "webpack serve"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.17",
+    "@chakra-ui/react": "^2.5.1",
+    "@chakra-ui/styled-system": "^2.6.1",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "framer-motion": "^10.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "web3": "^1.8.2"
   },
   "devDependencies": {
