--- a/truffle/package.json
+++ b/truffle/package.json
@@ -7,7 +7,9 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.8.2",
-    "@truffle/hdwallet-provider": "^2.1.7",
-    "dotenv": "^16.0.3"
+    "@openzeppelin/test-helpers": "^0.5.16",
+    "@truffle/hdwallet-provider": "^2.1.8",
+    "dotenv": "^16.0.3",
+    "truffle": "^5.8.0"
   }
 }
