--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@ node_modules
 build
 package.json
 .env
+client/package-lock.json
+package-lock.json
+client/src/contracts/Context.json
+client/src/contracts/Ownable.json
+client/src/contracts/Voting.json
